# Lambda3

./: .gitignore  Cargo.toml
crates/lambda3/: Cargo.toml
crates/lambda3_cli/: Cargo.toml
src/: ast.rs  cst.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  types.rs
src/examples/: missing_arrow.l3  missing_body_rparen.l3  simple_boolean_literal_application.l3
src/parser/: expr.rs  expressions.rs  patterns.rs  types.rs
src/snapshots/: lambda3__cst__tests__parse_expr_test@lambda_annotation.l3.snap  lambda3__cst__tests__parse_expr_test@missing_arrow.l3.snap  lambda3__cst__tests__parse_expr_test@missing_binder.l3.snap  lambda3__cst__tests__parse_expr_test@missing_body.l3.snap  lambda3__cst__tests__parse_expr_test@missing_body_rparen.l3.snap  lambda3__cst__tests__parse_expr_test@simple.l3.snap  lambda3__cst__tests__parse_expr_test@simple_application.l3.snap  lambda3__cst__tests__parse_expr_test@simple_boolean_literal_application.l3.snap  lambda3__cst__tests__parse_expr_test@simple_number_literal.l3.snap  lambda3__cst__tests__parse_patterns_test@annotation.l3.snap  lambda3__cst__tests__parse_patterns_test@kitchen_sink.l3.snap  lambda3__cst__tests__parse_patterns_test@missing_closing_paren.l3.snap  lambda3__cst__tests__parse_patterns_test@no_pattern.l3.snap  lambda3__cst__tests__parse_patterns_test@paren.l3.snap  lambda3__cst__tests__parse_patterns_test@var.l3.snap  lambda3__cst__tests__parse_patterns_test@wildcard.l3.snap  lambda3__cst__tests__parse_type_test@func_ty.l3.snap  lambda3__cst__tests__parse_type_test@nested_parens_type.l3.snap  (+19 more)
xtask/: Cargo.toml
(+85 files in other folders)
